fixed signup button not centered in newsletter section

--- a/sass/plugins/_mailchimp.scss
+++ b/sass/plugins/_mailchimp.scss
@@ -51,7 +51,7 @@
     }
   }
   button {
-    margin:auto;
+    margin:auto !important;
     display:block;
     font-family: lato, sans-serif;
     font-weight: bold;
